--- a/wby-react-scripts/package.json
+++ b/wby-react-scripts/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "w": "./bin/index.js"
+    "wby-react-scripts": "./bin/index.js"
   },
   "author": "",
   "license": "ISC",
